Default "Background" layer not removed while loading
While loading diagram this layer meant to be deleted at load_save.c:466
but data_remove_layer()
will not deleting last diagram layer according to diagramdata.c:637
so every time you load diagram it adds another empty default layer to layer stack.
Also there is no point to check layer count at load_save.c:784
because there always will be default layer.
Quick fix in merge request !80.
Edited by Erelwar