load: kill the initial layer

This pesky thing could unintentionally surive a diagram being loaded,
leading to endless ‘Background’ layers.

Fix: https://gitlab.gnome.org/GNOME/dia/-/issues/467